--- a/DWCC-03/Ejercicio1conts/Ejerciciots.html
+++ b/DWCC-03/Ejercicio1conts/Ejerciciots.html
@@ -3,7 +3,7 @@
 <head>
     <meta  http-equiv="content-type"  content="text/html;charset=utf-8">
     <title>Ejercicio1</title>
-    <script src="Ejercicio1.js"></script>
+    <script src="Ejercicio1.ts"></script>
 </head>
 <body>
 
