--- a/DWCC-04/Ejercicio2conTypeScript/Objetos.html
+++ b/DWCC-04/Ejercicio2conTypeScript/Objetos.html
@@ -11,7 +11,7 @@
 
         <h1>Ejercicio de objetos con Type </h1>
     
-        <script src="Objetos.ts"></script>
+        <script src="Objetos.js"></script>
 
         
 </body>
