--- a/DWCC-05/FormularioJavaScript/Formulario.html
+++ b/DWCC-05/FormularioJavaScript/Formulario.html
@@ -60,24 +60,24 @@
             <input type="text" id="nombre"  onclick="raton()" required><br>
         </p>
 
-        <p  id="dos">
+        <p  >
             <label for="apellidos">Apellidos: </label>
-            <input type="text" id="apellidos"   onclick="raton()"   required><br>
+            <input type="text" id="apellidos"      required><br>
         </p>
 
-        <p id="tres">
+        <p >
             <label for="edad">Edad: </label>
-            <input type="number" id="edad" onclick="raton()"   min="18" max="99" required><br>
+            <input type="number" id="edad"   min="18" max="99" required><br>
         </p>
 
-        <p id="cuatro">
+        <p >
             <label for="nif">NIF: </label>
-            <input type="text" id="nif" onclick="raton()" required><br>
+            <input type="text" id="nif"  required><br>
         </p>
 
-        <p id="cinco">
+        <p >
             <label for="email">Email: </label>
-            <input type="email" id="email"   onclick="raton()"  required><br>
+            <input type="email" id="email"    required><br>
         </p>
 
         <p >
