--- a/DWCC-07/AJAX/lista.html
+++ b/DWCC-07/AJAX/lista.html
@@ -6,10 +6,11 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script type="text/javascript">
 
+        //generar que engloba todas las funciones 
         $(() => {
             
 
-
+            //funcion que muestra los nombres en una lista desordenada
             $.ajax({
                 url: 'https://jsonplaceholder.typicode.com/users',
                 type: 'GET',
@@ -25,7 +26,7 @@
                 }
             });
 
-
+            // funcion que muestra todos los usuarios
 			document.getElementById('datos').addEventListener('click', function() {
                 $.ajax({
                     url: 'https://jsonplaceholder.typicode.com/users',
@@ -43,7 +44,7 @@
                 });
             });
 
-
+            //funcion para seleccionar el album
 			$.ajax({
                 url: 'https://jsonplaceholder.typicode.com/albums',
                 type: 'GET',
@@ -60,23 +61,25 @@
             });
 
 
-			$("#selectAlbum").change(function() {
-        var albumId = $(this).val();
-        $.ajax({
-			url: 'https://jsonplaceholder.typicode.com/albums',
-            type: 'GET',
-            async: true,
-            success: function(photos) {
-                // Mostrar las primeras 3 fotos del álbum seleccionado
-                for (var i = 0; i < 3; i++) {
-                    console.log("Foto:", photos[i]);
-                }
-            },
-            error: function(jqXHR, status, error) {
-                console.log("Error:", error);
-            }
-        });
-    });
+      // Función para cargar fotos del álbum seleccionado
+      $("#albumes").change(function() {
+                var albumId = $(this).val();
+                $.ajax({
+                    url: 'https://jsonplaceholder.typicode.com/photos?albumId=' + albumId,
+                    type: 'GET',
+                    async: true,
+                    success: function(photos) {
+                        $('#fotosAlbum').empty(); // Limpiar las fotos anteriores
+                        // Mostrar las primeras 3 fotos del álbum seleccionado
+                        for (var i = 0; i < 3; i++) {
+                            $('#fotosAlbum').append('<li> <img src= photos[i].thumbnailUrl > </li>');
+                        }
+                    },
+                    error: function(jqXHR, status, error) {
+                        console.error("Error:", error);
+                    }
+                });
+            });
 
 
 
