--- a/DWCC-08/tarea8.html
+++ b/DWCC-08/tarea8.html
@@ -190,5 +190,9 @@
 
 <!-- Tu script de Vue.js -->
 <script src="tarea8.js"></script>
+<script src="./components/productosTienda.js"></script>
+<script >
+  const mountedApp= App.mount('#app')
+</script>
 </body>
 </html>
