--- a/DWCC-08/tarea8.html
+++ b/DWCC-08/tarea8.html
@@ -133,7 +133,7 @@
 
 <h3 v-show="ok">Ofertas del día</h3>
 
-<div v-on:mousemove="colorVal=Math.floor(Math.random()*360)">
+<div >
   <p v-if="hora >= 18">Nuestro pescado del día</p>
   <p v-if="hora >= 12 && hora <= 14">El mejor pan recién hecho</p>
   <p v-if="hora >= 16">Aprovecha nuestra fruta de temporada al mejor precio</p>
